@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

class Company {
-Designation
}

class Container {
-Identification
-Payload
-Tare
-Gross
-Width
-Height
-Length
-Refrigerated
-Temperature
}

class Ship {
-MMSI
-Name
-IMO
-Number of Energy Generators
-Generators' Power Output
-Call sign
-Vessel type
-Length
-Width
-Capacity
-Draft
-FleetManager
-ShipCaptain
-ShipChiefElectricalEngineer
}

class CargoManifest {
-Destination
-Date_time_start
-Date_time_end
}

class Trip {
-Starting point
-Destination
}

Company "1" -- "1..*" Ship : Owns >
Ship "1" -- "*" Trip : performs >
Trip "1..*" -- "1..*" CargoManifest : has >
CargoManifest "*" -- "1..*" Container : Keeps track of >


@enduml